# recollwebui-novel

./: .gitignore  README.rst  pyproject.toml  webui-wsgi.py  webui.py
examples/: recoll-webui.service
recoll_webui/: webui.py  webui_standalone.py
static/: extra.js  jdpicker.css  style.css
static/reader/: app.js  kookit.bundle.js
vendor-build/reader-bundle/: entry.mjs  package.json
views/: pages.tpl  reader.tpl  result.tpl  results.tpl  search.tpl
