[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recoll-webui"
version = "1.0"
description = "The Recoll WebUI implements an HTTP server for querying a Recoll index from a Web browser"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = ["waitress"]

# Define a CLI command
[project.scripts]
"webui-standalone.py" = "recoll_webui.webui_standalone:main"

# Include non-Python files in the package
[tool.hatch.build]
include = ["recoll_webui/**"]
exclude = ["*.pyc", "__pycache__"]

# Tell hatch to include data files inside the package
[tool.hatch.build.targets.wheel]
packages = ["recoll_webui"]

[tool.hatch.build.targets.sdist]
include = ["recoll_webui", "README.rst", "pyproject.toml"]
